--- a/frontend/public/locale/en/translation.json
+++ b/frontend/public/locale/en/translation.json
@@ -28,5 +28,19 @@
     "css": "Styling and layout magic for responsive designs",
     "django": "Robust backend framework for full-featured apps",
     "flask": "Lightweight framework for quick API and backend builds",
-    "sqlite": "Simple, file-based database for smaller apps and testing"
+    "sqlite": "Simple, file-based database for smaller apps and testing",
+    "proj_descript": {
+        "1": {
+            "name": "MindScope",
+            "description": "A modern landing page for a mental health startup, featuring clean UX, animated SVG icons, and a contact form integrated with Google Sheets and email notifications."
+        },
+        "2": {
+            "name": "QuickCart",
+            "description": "A minimal e-commerce prototype for digital products with Stripe Checkout integration, wishlist functionality, and a responsive layout optimized for mobile users."
+        },
+        "3": {
+            "name": "EduWave",
+            "description": "A single-page site for an online course platform showcasing course cards, instructor bios, and dynamic content loading with React and Django REST API."
+        }
+    }
 }
