--- a/frontend/public/locale/pt/translation.json
+++ b/frontend/public/locale/pt/translation.json
@@ -20,6 +20,7 @@
     "phone": "Telefone",
     "message": "Mensagem",
     "send": "Enviar",
+    "sending": "A enviar...",
     "tech_h4": "Aqui estão algumas das tecnologias com que tenho trabalhado recentemente",
     "python": "Para desenvolvimento backend e scripts",
     "js": "Para tornar a web interativa",
